[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/UI/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/Fonts/candles_.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/UI/Menu/MenuBtn.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/PNG/pause_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/SFX/menu_click.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
layer = 100
script = ExtResource( 1 )

[node name="PauseOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.27451 )

[node name="Container" type="CenterContainer" parent="PauseOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuContainer" type="VBoxContainer" parent="PauseOverlay/Container"]
margin_left = 582.0
margin_top = 405.0
margin_right = 857.0
margin_bottom = 674.0
custom_constants/separation = 25

[node name="PausedLabel" type="Label" parent="PauseOverlay/Container/MenuContainer"]
margin_right = 275.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0.486275, 0.862745, 0.74902, 1 )
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1

[node name="Control" type="Control" parent="PauseOverlay/Container/MenuContainer"]
margin_top = 89.0
margin_right = 275.0
margin_bottom = 89.0

[node name="ResumeBtn" parent="PauseOverlay/Container/MenuContainer" instance=ExtResource( 3 )]
margin_top = 114.0
margin_right = 275.0
margin_bottom = 179.0
rect_min_size = Vector2( 275, 65 )
size_flags_horizontal = 6
text = "Resume Game"

[node name="MainMenuBtn" parent="PauseOverlay/Container/MenuContainer" instance=ExtResource( 3 )]
margin_top = 204.0
margin_right = 275.0
margin_bottom = 269.0
rect_min_size = Vector2( 275, 65 )
size_flags_horizontal = 6
text = "Main Menu"

[node name="PauseBtn" type="TextureButton" parent="."]
modulate = Color( 0.619608, 0.937255, 0.0509804, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -24.0
margin_top = 16.0
margin_right = 24.0
margin_bottom = 48.0
texture_normal = ExtResource( 4 )

[node name="MenuClickSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="PauseOverlay/Container/MenuContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="PauseOverlay/Container/MenuContainer/MainMenuBtn" to="." method="_on_MainMenuBtn_pressed"]
[connection signal="pressed" from="PauseBtn" to="." method="_on_PauseBtn_pressed"]
